manifests/service.yml
apiVersion: v1
kind: Service
metadata:
    name: "kbaalphaclusterqa-077d"
    labels:
        app: "kbaalphaclusterqa-077d"
spec:
    type: LoadBalancer
    ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    selector:
        app: "kbaalphaclusterqa-077d"
